--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -58,6 +58,8 @@ console.log(res.data);
 
 ```
 
+- here res is [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object but with on additional field **data**. by default data will whatever output we get from [res.json()](https://developer.mozilla.org/en-US/docs/Web/API/Response/json). if `res.json()` throws an error then data will have empty `{}`. check out http options for more details.
+- For indepth examples visit Get in example section
 
 ## Start your site
 
