--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -61,17 +61,10 @@ console.log(res.data);
 - here res is [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object but with on additional field **data**. by default data will whatever output we get from [res.json()](https://developer.mozilla.org/en-US/docs/Web/API/Response/json). if `res.json()` throws an error then data will have empty `{}`. check out http options for more details.
 - For indepth examples visit Get in example section
 
-## Start your site
+## live Playground.
 
-Run the development server:
+- Playground allows you to test http-pro in browser without installing anything.
+- this might be useful for following things.
+1. testing **http-pro**.
+2. reporting bugs.
 
-```bash
-cd my-website
-npm run start
-```
-
-The `cd` command changes the directory you're working with. In order to work with your newly created Docusaurus site, you'll need to navigate the terminal there.
-
-The `npm run start` command builds your website locally and serves it through a development server, ready for you to view at http://localhost:3000/.
-
-Open `docs/intro.md` (this page) and edit some lines: the site **reloads automatically** and displays your changes.
