--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -4,6 +4,7 @@ sidebar_position: 1
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import {PlayGround} from '@site/src/components/docs/Playground'
 
 # Getting Started
 
@@ -67,4 +68,6 @@ console.log(res.data);
 - this might be useful for following things.
 1. testing **http-pro**.
 2. reporting bugs.
+
+<PlayGround/>
 
