--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -12,10 +12,10 @@ import {PlayGround} from '@site/src/components/docs/Playground'
 
 ## Features
 
-- First-class typescript support.(Better than default typescript support for Fetch API). 
-- Simple syntax(for example, `hp.get(url)` to send get request).
+- First-class typescript support.( Better than default typescript support for Fetch API). 
+- Simple syntax( For example, `hp.get(url)` to send get request).
 - timeout.
-- throwing Error when http status code is not between 200 and 299.(also supports custom error handling logic.)
+- throwing Error when http status code is not between 200 and 299.( also supports custom error handling logic.)
 - create a Instance with default options.
 - Lifecycle methods.
 
@@ -59,8 +59,8 @@ console.log(res.data);
 
 ```
 
-- here res is [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object but with on additional field **data**. by default data will whatever output we get from [res.json()](https://developer.mozilla.org/en-US/docs/Web/API/Response/json). if `res.json()` throws an error then data will have empty `{}`. check out http options for more details.
-- For indepth examples visit Get in example section
+- here `res` is [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object but with on additional property **data**. by default data will have whatever output we get from [res.json()](https://developer.mozilla.org/en-US/docs/Web/API/Response/json). if `res.json()` throws an error then data will have empty `{}`. check out http options for more details.
+- For in depth examples visit get in example section.
 
 ## live Playground.
 
