--- a/docs/docs/example/get.mdx
+++ b/docs/docs/example/get.mdx
@@ -10,9 +10,10 @@ import {
   Text,
   TextExtened,
   Blob,
+  BlobExtended,
 } from '@site/src/components/docs/get';
 
-## 1. &nbsp JSON data
+## 1. JSON data
 
 <Json />
 
@@ -27,7 +28,7 @@ Here, `res` is just a javascript [Response](https://developer.mozilla.org/en-US/
 <br />
 <JsonFetch />
 
-## 2. &nbsp Text data
+## 2. Text data
 
 - To get text data from response you just need to set `text` as [responseType](../Types/HttpOptions#responsetype) and in data property of [HpResponse](../Types/HpResponse) object will have `text` data.
 
@@ -44,7 +45,7 @@ Here, `res` is just a javascript [Response](https://developer.mozilla.org/en-US/
 
 ## 3. Blob data
 
-- To get text data from response you just need to set `text` as [responseType](../Types/HttpOptions#responsetype) and in data property of [HpResponse](../Types/HpResponse) object will have `text` data.
+- To get blob data from response you just need to set `blob` as [responseType](../Types/HttpOptions#responsetype) and in data property of [HpResponse](../Types/HpResponse) object will have `blob` data.
 
 <Blob />
 <br />
@@ -55,3 +56,4 @@ Here, `res` is just a javascript [Response](https://developer.mozilla.org/en-US/
 :::
 
 <br />
+<BlobExtended />
