--- a/docs/docs/example/post.mdx
+++ b/docs/docs/example/post.mdx
@@ -15,5 +15,5 @@ import { Json } from '@site/src/components/docs/post';
 <br />
 
 :::note
-whenever users sends the json data to the server using [json](../Types/HttpOptions#json) property of `HttpOptions`, it will set header `content-type : application/json` if headers object does not have `content-type` field.
+whenever users sends the json data to the server using [json](../Types/HttpOptions#json) property of `HttpOptions`, it will set `content-type : application/json` header if headers object does not have `content-type` field.
 :::
