--- a/docs/docs/example/post.mdx
+++ b/docs/docs/example/post.mdx
@@ -4,7 +4,7 @@ id: post
 title: POST
 ---
 
-import { Json } from '@site/src/components/docs/post';
+import { Json, FormData } from '@site/src/components/docs/post';
 
 ## 1. JSON data
 
@@ -17,3 +17,7 @@ import { Json } from '@site/src/components/docs/post';
 :::note
 whenever users sends the json data to the server using [json](../Types/HttpOptions#json) property of `HttpOptions`, it will set `content-type : application/json` header if headers object does not have `content-type` field.
 :::
+
+<br />
+<br />
+<FormData />
