--- a/docs/docs/example/post.mdx
+++ b/docs/docs/example/post.mdx
@@ -18,6 +18,8 @@ import { Json, FormData } from '@site/src/components/docs/post';
 whenever users sends the json data to the server using [json](../Types/HttpOptions#json) property of `HttpOptions`, it will set `content-type : application/json` header if headers object does not have `content-type` field.
 :::
 
+## 2. FormData
+
 <br />
 <br />
 <FormData />
