--- a/docs/docs/example/patch.mdx
+++ b/docs/docs/example/patch.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 4
 id: patch
-title: PATCH
+title: Patch
 ---
 
 import { Json, JsonResponse } from '@site/src/components/docs/patch';
