--- a/docs/docs/example/put.mdx
+++ b/docs/docs/example/put.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 3
 id: put
-title: PUT
+title: Put
 ---
 
 import { Json, JsonResponse } from '@site/src/components/docs/put';
