--- a/docs/docs/example/delete.mdx
+++ b/docs/docs/example/delete.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 5
 id: delete
-title: DELETE
+title: Delete
 ---
 
 import { Delete } from '@site/src/components/docs/delete';
