--- a/docs/docs/example/post.mdx
+++ b/docs/docs/example/post.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 2
 id: post
-title: POST
+title: Post
 ---
 
 import { Json, FormData, JsonResponse } from '@site/src/components/docs/post';
