--- a/docs/docs/example/instance.mdx
+++ b/docs/docs/example/instance.mdx
@@ -4,6 +4,12 @@ id: instance
 title: Instance
 ---
 
+import { Instance, ExtendInstance } from '@site/src/components/docs/Instance';
+
 - instance is very handy feature for adding predefined properties in `http-pro` request.
 
-- You can also extend the instance with `http-pro`.
+<Instance />
+
+## Extend Instance
+
+- `hp.extend()` is useful for creating extened version for `http-pro` instance. it will have all the properties of current instance.
