example Types to API link

--- a/docs/docs/example/baseUrl.mdx
+++ b/docs/docs/example/baseUrl.mdx
@@ -13,7 +13,7 @@ import { BaseUrl } from '@site/src/components/docs/baseUrl';
 <br />
 
 :::note
-**http-pro** is has no opinion about leading slash in [input URL](../Types/Input) or trailing slash in `baseUrl`, because it will remove slash if [input](../Types/Input) starts with slash, and it will add slash at the end of the baseUrl if there is no slash. because of this feature following `input` and `baseUrl` will resolve to same url.
+**http-pro** is has no opinion about leading slash in [input URL](../API/Input) or trailing slash in `baseUrl`, because it will remove slash if [input](../Types/Input) starts with slash, and it will add slash at the end of the baseUrl if there is no slash. because of this feature following `input` and `baseUrl` will resolve to same url.
 :::
 
 ```ts
