--- a/docs/docs/example/error-handling.mdx
+++ b/docs/docs/example/error-handling.mdx
@@ -21,6 +21,6 @@ import {
 
 <br />
 
-- If you want to customize the default behaviour of error logic, you can use [validateStatus](../Types/HttpOptions#validatestatus) property of `httpOptions`. it will get `statusCode` as an arguement and it needs to return `boolean`, if function returns `true` it will not throw an Error otherwise it will.
+- If you want to customize the default behaviour of error logic, you can use [validateStatus](../API/HttpOptions#validatestatus) property of `httpOptions`. it will get `statusCode` as an arguement and it needs to return `boolean`, if function returns `true` it will not throw an Error otherwise it will.
 
 <CustomError />
