--- a/docs/docs/example/get.mdx
+++ b/docs/docs/example/get.mdx
@@ -30,7 +30,7 @@ Here, `res` is just a javascript [Response](https://developer.mozilla.org/en-US/
 
 ## 2. Text data
 
-- To get text data from response you just need to set `text` as [responseType](../Types/HttpOptions#responsetype) and in data property of [HpResponse](../Types/HpResponse) object will have `text` data.
+- To get text data from response you just need to set `text` as [responseType](../API/HttpOptions#responsetype) and in data property of [HpResponse](../API/HpResponse) object will have `text` data.
 
 <Text />
 <br />
@@ -45,7 +45,7 @@ Here, `res` is just a javascript [Response](https://developer.mozilla.org/en-US/
 
 ## 3. Blob data
 
-- To get blob data from response you just need to set `blob` as [responseType](../Types/HttpOptions#responsetype) and in data property of [HpResponse](../Types/HpResponse) object will have `blob` data.
+- To get blob data from response you just need to set `blob` as [responseType](../API/HttpOptions#responsetype) and in data property of [HpResponse](../API/HpResponse) object will have `blob` data.
 
 <Blob />
 <br />
