--- a/docs/docs/example/patch.mdx
+++ b/docs/docs/example/patch.mdx
@@ -8,14 +8,14 @@ import { Json, JsonResponse } from '@site/src/components/docs/patch';
 
 ## 1. JSON data
 
-- If you want to send `json` data to the server, just add your javascript object in [json](../Types/HttpOptions#json) property of `HttpOptions`.
+- If you want to send `json` data to the server, just add your javascript object in [json](../API/HttpOptions#json) property of `HttpOptions`.
 
 <Json />
 <br />
 <br />
 
 :::note
-whenever users sends the json data to the server using [json](../Types/HttpOptions#json) property of `HttpOptions`, it will set `content-type : application/json` header if `headers` object does not have `content-type` field.
+whenever users sends the json data to the server using [json](../API/HttpOptions#json) property of `HttpOptions`, it will set `content-type : application/json` header if `headers` object does not have `content-type` field.
 :::
 
 <br />
