HpResponse and HttpOptions image

--- a/docs/docs/API/HpResponse.mdx
+++ b/docs/docs/API/HpResponse.mdx
@@ -1,4 +1,12 @@
-- whenever you fetch a request using **http-pro** you will get Response which will have following properties.
+---
+sidebar_position: 3
+id: HpResponse
+title: HpResponse
+---
+
+import { HpResponse } from '@site/src/components/API';
+
+<HpResponse /> - whenever you fetch a request using \\\\\\*\\\\\\*http-pro\\\\\\*\\\\\\* you will get Response which will have following properties.
 
 1. all the properties of javascript [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object.
 2. ### `data`
