getting-started get example link

--- a/docs/docs/getting-started.mdx
+++ b/docs/docs/getting-started.mdx
@@ -60,7 +60,7 @@ console.log(res.data);
 ```
 
 - here `res` is [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object but with on additional property **data**. by default data will have whatever output we get from [res.json()](https://developer.mozilla.org/en-US/docs/Web/API/Response/json). if `res.json()` throws an error then data will have empty `{}`. check out http options for more details.
-- For in depth examples visit get in example section.
+- For in depth examples visit [get](example/get) in example section.
 
 ## live Playground.
 
