--- a/docs/docs/example/node.mdx
+++ b/docs/docs/example/node.mdx
@@ -31,6 +31,8 @@ yarn add http-pro @http-pro/isomorphic
 
 ## Example
 
+1. node-v16
+
 <NodeExample/>
 
 <br/><br/>
@@ -38,3 +40,7 @@ yarn add http-pro @http-pro/isomorphic
 :::note
 As you can see `@http-pro/isomorphic` has a same syntax as `http-pro`, so there won't be any new learning curve if you want to use it in node. 
 :::
+
+2. node-v18
+
+- At this moment there is no online IDE supports version 18, so if you want to play around with node-18, i have created simple [stater-pack](https://github.com/pranshushah/http-pro/tree/main/node-example) with docker.
