--- a/docs/docs/example/timeout.mdx
+++ b/docs/docs/example/timeout.mdx
@@ -4,4 +4,8 @@ id: timeout
 title: timeout
 ---
 
-- `http-pro` provides **timout** out the box, for more details please checkout [API](../API/HttpOptions#timeout) reference.
+import { Timeout } from '@site/src/components/docs/timeout';
+
+- `http-pro` provides **timeout** out the box, for more details please checkout [API](../API/HttpOptions#timeout) reference.
+
+<Timeout />
