feat: next.js example.

--- a/docs/docs/example/nextjs.mdx
+++ b/docs/docs/example/nextjs.mdx
@@ -6,6 +6,6 @@ title: Next.js
 
 import { Next } from '@site/src/components/docs/nextjs';
 
-- with htt-p
+- with http-pro working with next.js is very easy. if you are working with client-side or next.js edge functions(provided by vercel) just use `http-pro` and if you are working with serverless functions, use `@http-pro/isomorphic` instead.
 
 <Next />
