--- a/docs/docs/example/post.mdx
+++ b/docs/docs/example/post.mdx
@@ -29,6 +29,6 @@ Here, res is just a javascript [Response](https://developer.mozilla.org/en-US/do
 
 ## 2. FormData
 
-- working with [Formdata](https://developer.mozilla.org/en-US/docs/Web/API/FormData/Using_FormData_Objects) is very straight forward. just paas `FormData` object to [body](https://developer.mozilla.org/en-US/docs/Web/API/Request/body) property.
+-if you want to send [Formdata](https://developer.mozilla.org/en-US/docs/Web/API/FormData/Using_FormData_Objects) then just paas `FormData` object to [body](https://developer.mozilla.org/en-US/docs/Web/API/Request/body) property.
 
 <FormData />
