fix: doc HttpError -> HttpProError

--- a/docs/docs/example/error-handling.mdx
+++ b/docs/docs/example/error-handling.mdx
@@ -16,7 +16,7 @@ import {
 <br />
 
 :::note
-**_http-pro_** throws a custom Error called `HttpError` when `statucCode` is not valid. which is helpful for `instanceof` check as shown above.
+**_http-pro_** throws a custom Error called `HttpProError` when `statucCode` is not valid.
 :::
 
 <br />
