fix: isHttpProError in example of Error handling

--- a/docs/docs/example/error-handling.mdx
+++ b/docs/docs/example/error-handling.mdx
@@ -16,7 +16,7 @@ import {
 <br />
 
 :::note
-**_http-pro_** throws a custom Error called `HttpProError` when `statucCode` is not valid.
+**_http-pro_** throws a custom Error called `HttpProError` when `statucCode` is not valid. you can check if given error is `HttpProError` or not by using `isHttpProError` function.
 :::
 
 <br />
