fix: lifecycle methods to intercecptors

--- a/docs/docs/getting-started.mdx
+++ b/docs/docs/getting-started.mdx
@@ -17,7 +17,7 @@ import { PlayGround } from '@site/src/components/docs/Playground';
 - timeout.
 - throwing Error when http status code is not between 200 and 299.( also supports custom error handling logic.)
 - create a Instance with default options.
-- Lifecycle methods.
+- interceptor function.
 - data validation with zod and yup.
 - Node and Bun support.
 - and more...
